--- a/jenkins/scripts/deployment.yaml
+++ b/jenkins/scripts/deployment.yaml
@@ -34,3 +34,23 @@ spec:
     - port: 9090
       targetPort: 8080
   type: NodePort
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  labels:
+    k8s-app: hello
+  name: hello
+  namespace: nju23
+spec:
+  endpoints:
+    - interval: 30s
+      port: tcp
+      path: /actuator/prometheus
+      scheme: 'http'
+  selector:
+    matchLabels:
+      app: application
+  namespaceSelector:
+    matchNames:
+      - nju23
