--- a/jenkins/scripts/deployment.yaml
+++ b/jenkins/scripts/deployment.yaml
@@ -53,7 +53,7 @@ metadata:
   labels:
     k8s-app: hello
   name: hello
-  namespace: monitoring
+  namespace: nju23
 spec:
   endpoints:
     - interval: 30s
